<resources>
    <string name="app_name">TMS</string>
    <string name="glance_title">VERSE OF THE DAY</string>
    <string name="select_pack">SELECT A MEMORY PACK</string>
    <string name="peek_btn">Peek</string>
    <string name="next_btn">Next</string>
    <string name="to_main_btn">Back to Main</string>
    <string name="open_menu">Open main menu</string>
    <string name="close_menu">Close main menu</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="contact_us">Contact Us</string>
    <string name="contact_us_email">mailto:contact_us@juniahn.com</string>
    <string name="contact_us_email_subject">[Contact Us] Topical Memory System</string>
    <string name="contact_us_email_chooser">Send Email...</string>
    <string name="guideline_title">Recite the verse</string>
    <string name="guideline_1">If you need to peak at the verse, hold down the eye icon in the lower left.</string>
    <string name="guideline_2">Tap the screen if you want to reveal the next word.</string>
    <string name="guideline_3">Once completed, click the "Next verse" button.</string>
    <string name="topic_a">Live the New Life</string>
    <string name="sub_topic_a_1">Christ the Center</string>
    <string name="scripture_a_1">Therefore, if anyone is in Christ, he is a new creation; the old has gone, the new has come!</string>
    <string name="verse_a_1">2 Corinthians 5:17</string>
    <string name="sub_topic_a_2">Christ the Center</string>
    <string name="scripture_a_2">I have been crucified with Christ and I no longer live, but Christ lives in me. The life I live in the body, I live by faith in the Son of God, who loved me and gave Himself for me.</string>
    <string name="verse_a_2">Galatians 2:20</string>
    <string name="sub_topic_a_3">Obedience to Christ</string>
    <string name="scripture_a_3">Therefore, I urge you, brothers, in the view of God\'s mercy, to offer your bodies as living sacrifices, holy and pleasing to God—this is your spiritual act of worship.</string>
    <string name="verse_a_3">Romans 12:1</string>
    <string name="sub_topic_a_4">Obedience to Christ</string>
    <string name="scripture_a_4">"Whoever has My commands and obeys them, he is the one who loves Me. He who loves Me will be loved by My Father, and I too will love him and show Myself to him."</string>
    <string name="verse_a_4">John 14:21</string>
    <string name="sub_topic_a_5">The Word</string>
    <string name="scripture_a_5">All Sripture is God-breathed and is useful for teaching, rebuking, correcting and training in righteousness.</string>
    <string name="verse_a_5">2 Timothy 3:16</string>
    <string name="sub_topic_a_6">The Word</string>
    <string name="scripture_a_6">"Do not let this Book of the Law depart from your mouth; meditate on it day and night, so that you may be careful to do everything written in it. Then you will be prosperous and successful."</string>
    <string name="verse_a_6">Joshua 1:8</string>
    <string name="sub_topic_a_7">Prayer</string>
    <string name="scripture_a_7">"If you remain in Me and My words remain in you, ask whatever you wish, and it will be given you."</string>
    <string name="verse_a_7">John 15:7</string>
    <string name="sub_topic_a_8">Prayer</string>
    <string name="scripture_a_8">Do not be anxious about anything, but in everything, by prayer and petition, with thanksgiving, present your requests to God. And the peace of God, which transcends all understanding, will guard your hearts and your minds in Christ Jesus.</string>
    <string name="verse_a_8">Philippians 4:6-7</string>
    <string name="sub_topic_a_9">Fellowship</string>
    <string name="scripture_a_9">"For where two or three come together in My name, there am I with them."</string>
    <string name="verse_a_9">Matthew 18:20</string>
    <string name="sub_topic_a_10">Fellowship</string>
    <string name="scripture_a_10">And let us consider how we may spur one another on toward love and good deeds. Let us not give up meeting together, as some are in the habit of doing, but let us encourage one another—and all the more as you see the Day approaching.</string>
    <string name="verse_a_10">Hebrews 10:24-25</string>
    <string name="sub_topic_a_11">Witnessing</string>
    <string name="scripture_a_11">"Come, Follow Me," Jesus said, "and I will make you fishers of men."</string>
    <string name="verse_a_11">Matthew 4:19</string>
    <string name="sub_topic_a_12">Witnessing</string>
    <string name="scripture_a_12">I am not ashamed of the gospel, because it is the power of God for the salvation of everyone who believes: first for the Jew, then for the Gentile.</string>
    <string name="verse_a_12">Romans 1:16</string>
    <string name="topic_b">Proclaim Christ</string>
    <string name="sub_topic_b_1">All Have Sinned</string>
    <string name="scripture_b_1">For all have sinned and fall short of the glory of God.</string>
    <string name="verse_b_1">Romans 3:23</string>
    <string name="sub_topic_b_2">All Have Sinned</string>
    <string name="scripture_b_2">We all, like sheep, have gone astray, each of us has turned to his own way; and the Lord has laid on Him the iniquity of us all.</string>
    <string name="verse_b_2">Isaiah 53:6</string>
    <string name="sub_topic_b_3">Sin\'s Penalty</string>
    <string name="scripture_b_3">For the wages of sin is death, but the gift of God is eternal life in Christ Jesus our Lord.</string>
    <string name="verse_b_3">Romans 6:23</string>
    <string name="sub_topic_b_4">Sin\'s Penalty</string>
    <string name="scripture_b_4">Just as men is destined to die once, and after that to face judgment.</string>
    <string name="verse_b_4">Hebrews 9:27</string>
    <string name="sub_topic_b_5">Christ Paid the Penalty</string>
    <string name="scripture_b_5">But God demonstrates His own love for us in this: While we were still sinners, Christ died for us.</string>
    <string name="verse_b_5">Romans 5:8</string>
    <string name="sub_topic_b_6">Christ Paid the Penalty</string>
    <string name="scripture_b_6">For Christ died for sins once for all, the righteous for the unrighteous, to bring you to God. He was put to death in the body but made alive by the Spirit.</string>
    <string name="verse_b_6">1 Peter 3:18</string>
    <string name="sub_topic_b_7">Salvation Not by Works</string>
    <string name="scripture_b_7">For it is by grace you have been saved, through faith—and this not from yourselves, it is the gift of God—not by works, so that no one can boast.</string>
    <string name="verse_b_7">Ephesians 2:8-9</string>
    <string name="sub_topic_b_8">Salvation Not by Works</string>
    <string name="scripture_b_8">He saved us, not because of righteous things we had done, but because of His mercy. He saved us through the washing of rebirth and renewal by the Holy Spirit.</string>
    <string name="verse_b_8">Titus 3:5</string>
    <string name="sub_topic_b_9">Must Receive Christ</string>
    <string name="scripture_b_9">Yet to all who received Him, to those who believed in His name, He gave the right to become children of God.</string>
    <string name="verse_b_9">John 1:12</string>
    <string name="sub_topic_b_10">Must Receive Christ</string>
    <string name="scripture_b_10">"Here I am! I stand at the door and knock. If anyone hears my voice and opens the door, I will come in and eat with Him, and he with Me."</string>
    <string name="verse_b_10">Revelation 3:20</string>
    <string name="sub_topic_b_11">Assurance of Salvation</string>
    <string name="scripture_b_11">I write these things to you who believe in the name of the Son of God so that you may know that you have eternal life.</string>
    <string name="verse_b_11">1 John 5:13</string>
    <string name="sub_topic_b_12">Assurance of Salvation</string>
    <string name="scripture_b_12">"I tell you the truth, whoever hears My word and believes Him who sent Me has eternal life and will not be condemned; he has crossed over from death to life."</string>
    <string name="verse_b_12">John 5:24</string>
    <string name="topic_c">Rely on God\'s Resources</string>
    <string name="sub_topic_c_1">His Spirit</string>
    <string name="scripture_c_1">Don\'t you know that you yourselves are God\'s temple and that God\'s Spirit lives in you?</string>
    <string name="verse_c_1">1 Corinthians 3:16</string>
    <string name="sub_topic_c_2">His Spirit</string>
    <string name="scripture_c_2">We have not received the spirit of the world but the Spirit who is from God, that we may understand what God has freely given us.</string>
    <string name="verse_c_2">1 Corinthians 2:12</string>
    <string name="sub_topic_c_3">His Strength</string>
    <string name="scripture_c_3">"So do not fear, for I am with you; do not be dismayed, for I am your God. I will strengthen you and help you; I will uphold you with My righteous right hand."</string>
    <string name="verse_c_3">Isaiah 41:10</string>
    <string name="sub_topic_c_4">His Strength</string>
    <string name="scripture_c_4">I can do everything through Him ho gives me strength.</string>
    <string name="verse_c_4">Philippians 4:13</string>
    <string name="sub_topic_c_5">His Faithfulness</string>
    <string name="scripture_c_5">Because of the Lord\'s great love we are not consumed, for His compassions never fail. They are new every morning; great is Your faithfulness.</string>
    <string name="verse_c_5">Lamentations 3:22-23</string>
    <string name="sub_topic_c_6">His Faithfulness</string>
    <string name="scripture_c_6">"God is not a man, that He should lie, nor a son of man, that He should change His mind. Does He speak and then not act? Does He promise and not fulfill?"</string>
    <string name="verse_c_6">Numbers 23:19</string>
    <string name="sub_topic_c_7">His Peace</string>
    <string name="scripture_c_7">You will keep in perfect peace him whose mind is steadfast, because he trusts in You.</string>
    <string name="verse_c_7">Isaiah 26:3</string>
    <string name="sub_topic_c_8">His Peace</string>
    <string name="scripture_c_8">Cast all your anxiety on Him because He cares for You.</string>
    <string name="verse_c_8">1 Peter 5:7</string>
    <string name="sub_topic_c_9">His Provision</string>
    <string name="scripture_c_9">He who did not spare His on Son, but gave Him up for us all—how will He not also, along with Him, graciously give us all things?</string>
    <string name="verse_c_9">Romans 8:32</string>
    <string name="sub_topic_c_10">His Provision</string>
    <string name="scripture_c_10">And my God will meet all your needs according to His glorious riches in Christ Jesus.</string>
    <string name="verse_c_10">Philippians 4:19</string>
    <string name="sub_topic_c_11">His Help in Temptation</string>
    <string name="scripture_c_11">Because He Himself suffered when He was tempted, He is able to help those who are being tempted.</string>
    <string name="verse_c_11">Hebrews 2:18</string>
    <string name="sub_topic_c_12">His Help in Temptation</string>
    <string name="scripture_c_12">How can a young man keep his way pure? By living according to Your word. I have hidden Your word in my heart that I might not sin against You.</string>
    <string name="verse_c_12">Psalm 119:9,11</string>
    <string name="topic_d">Be Christ\'s Disciple</string>
    <string name="sub_topic_d_1">Put Christ First</string>
    <string name="scripture_d_1">"But seek first His kingdom and His righteousness, and all these things will be given to you as well."</string>
    <string name="verse_d_1">Matthew 6:33</string>
    <string name="sub_topic_d_2">Put Christ First</string>
    <string name="scripture_d_2">Then He said to them all: "If anyone would come after Me, he must deny himself and take up his cross daily and follow Me."</string>
    <string name="verse_d_2">Luke 9:23</string>
    <string name="sub_topic_d_3">Separate from the World</string>
</resources>