<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/memorizeScreen"
    android:gravity="center_vertical">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="235dp"
        android:orientation="vertical"
        android:id="@+id/verseContainer"
        android:layout_gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:id="@+id/verseSubTopic"
            android:text="@string/sub_topic_a_1"
            android:textColor="@color/dark_special_text"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/verse"
            android:text="@string/verse_a_1"
            android:textColor="@color/dark_default_text"
            android:textSize="30sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:id="@+id/verseScripture"
            android:text="@string/scripture_a_1"
            android:textColor="@color/dark_default_text"
            android:textSize="25sp" />

    </LinearLayout>



    <!--<LinearLayout-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:orientation="horizontal">-->

    <!--<Button-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:text="@string/peek_btn"-->
    <!--android:id="@+id/peekButton" />-->

    <!--<Button-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:text="@string/next_btn"-->
    <!--android:id="@+id/nextButton" />-->
    <!--</LinearLayout>-->
</LinearLayout>